corrected the quote margin to avoid overlap with actions button

--- a/h/static/styles/base.scss
+++ b/h/static/styles/base.scss
@@ -23,6 +23,7 @@
   font-style: italic;
   letter-spacing: 0.1px;
   padding: 0 1em;
+  margin-right: 10px;
 }
 
 //Provides the grey-background
